# pro_miniaudio

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  ffigen.yaml  main  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: app.dart  main.dart
example/lib/controllers/: audio_controller.dart  playback_device.dart  playback_waveform_device.dart
example/lib/dialogs/: formats_info_dialog.dart
example/lib/pages/: home.dart
example/lib/widgets/actions/: device_actions.dart
example/lib/widgets/bars/: status_bar.dart
example/lib/widgets/builders/: change_notifier_builder.dart
example/lib/widgets/dropdowns/: device_formats_dropdown.dart  devices_dropdown.dart
example/lib/widgets/inputs/: frequency_input.dart
example/lib/widgets/items/: playback_device_item.dart  (+1 more)
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugins.cmake
example/macos/Runner.xcodeproj/: project.pbxproj
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: pro_miniaudio.podspec
ios/Classes/: pro_miniaudio.c  pro_miniaudio.m
lib/: pro_miniaudio.dart
lib/src/: audio_context.dart  context.dart  device_infos.dart  file_logger.dart  internal.dart  library.dart  native_resource.dart  playback_device.dart  wav_encoder.dart  waveform.dart
lib/src/models/: audio_device_type.dart  audio_format.dart  device_id.dart  device_info.dart  device_state.dart  log_level.dart  pcm_format.dart  playback_config.dart  sample_format.dart  wav_encoder_config.dart  waveform_config.dart  waveform_type.dart
linux/: CMakeLists.txt
macos/: pro_miniaudio.podspec
macos/Classes/: pro_miniaudio.c
native/: CMakeLists.txt  Makefile
native/include/: audio_context.h  audio_context_private.h  audio_device.h  common.h  constants.h  context.h  context_internal.h  context_private.h  encoder.h  error_code.h  internal.h  logger.h  miniaudio.h  platform.h  playback_device.h  playback_device_internal.h  playback_device_private.h  resource_manager.h  result.h  waveform.h
native/src/: audio_context.c  audio_context_private.c  audio_device.c  context.c  context_private.c  encoder.c  error_code.c  internal.c  logger.c  miniaudio.c  playback_device.c  resource_manager.c  result.c  waveform.c
native/test/: test_runner.c
src/: CMakeLists.txt  logger.c  pro_miniaudio.c  pro_miniaudio.h  resource_manager.c  resource_manager.h
test/: test_runner.c
windows/: CMakeLists.txt
(+5 files in other folders)
